# pepper_workspace

./: .gitignore  README.md  TODO: mesh  build.sh  setup.sh
.devcontainer/config/: .aliases.sh  .bashrc  .p10k.zsh  ros2.repos  zsh_docker.sh
.devcontainer/cuda/: Dockerfile.cuda  devcontainer.json
.devcontainer/mesa/: Dockerfile.mesa  devcontainer.json
Pepper_Dashboard/: README.md  build.gradle  settings.gradle
Pepper_Dashboard/app/: build.gradle  proguard-rules.pro
Pepper_Dashboard/app/debug/: output-metadata.json
Pepper_Dashboard/app/release/: output-metadata.json
Pepper_Dashboard/app/src/androidTest/java/com/example/pepperdashboard/: ExampleInstrumentedTest.java
Pepper_Dashboard/app/src/main/: AndroidManifest.xml
Pepper_Dashboard/app/src/main/assets/: com_example_pepperdashboard_android.pem  help.txt  info.txt  story.txt
Pepper_Dashboard/app/src/main/assets/webview/: index.html  misuration.html
Pepper_Dashboard/app/src/main/assets/webview/iHealthCertificates/: com_redsing_effibot_pepperihealth_android.pem
Pepper_Dashboard/app/src/main/assets/webview/js/: main.js  misuration.js
Pepper_Dashboard/app/src/main/java/com/example/pepperdashboard/activity/: ExpActivity.java  GymActivity.java  HelpActivity.java  InfoActivity.java  MainActivity.java  MenuActivity.java  MisActivity.java  NewsActivity.java  SplashScreenActivity.java  StoryActivity.java  VidActivity.java  VideoActivity.java  misuration_old.java
Pepper_Dashboard/app/src/main/java/com/example/pepperdashboard/device/: PO3.java  iHealth.java
Pepper_Dashboard/app/src/main/java/com/example/pepperdashboard/logic/: RosMotion.java  RosTTS.java
Pepper_Dashboard/app/src/main/java/com/example/pepperdashboard/model/: DeviceCharacteristic.java
Pepper_Dashboard/app/src/main/res/drawable/: bg_gradient.xml  pom3_background.xml  splash_background.xml  splash_enea_background.xml
Pepper_Dashboard/app/src/main/res/layout/: activity_ip.xml  activity_main.xml  enea_login.xml  esplora_activity.xml  gym_activity.xml  help_activity.xml  info_activity.xml  main_page.xml  misuration_activiy.xml  news_activity.xml  pulse_activity.xml  story_activity.xml  vid_activity.xml  video_activity.xml
Pepper_Dashboard/app/src/main/res/mipmap-anydpi-v26/: bilancia.xml  blood_view.xml  pom3.xml  splash_enea_round.xml
Pepper_Dashboard/app/src/main/res/values/: ic_pepper_background.xml  splash_enea_background.xml  strings.xml  themes.xml
Pepper_Dashboard/app/src/main/res/values-night/: themes.xml
Pepper_Dashboard/app/src/main/res/xml/: network_security_config.xml
Pepper_Dashboard/app/src/test/java/com/example/pepperdashboard/: ExampleUnitTest.java
Pepper_Dashboard/gradle/wrapper/: gradle-wrapper.properties
src/: README.md
src/depth_to_laser/: package.xml  setup.cfg  setup.py
src/depth_to_laser/depth_to_laser/: main_node.py
src/depth_to_laser/launch/: depth_laser.launch.py  depth_perception.launch.py  rgb_to_depth_to_scan.launch.py
src/depth_to_laser/params/: pc_2_laser.yaml
src/my_turtle_pkg/: package.xml  setup.py
src/my_turtle_pkg/launch/: spawn_turtlebot3.launch.py  turtle_launcher.launch.py
src/my_turtle_pkg/meshes/: waffle_base.dae
src/my_turtle_pkg/model/turtlebot3_house/: model.config
src/my_turtle_pkg/params/: params.yaml
src/my_turtle_pkg/rviz/: config.rviz
src/my_turtle_pkg/sdf/: model.sdf
src/my_turtle_pkg/urdf/: model.urdf
src/my_turtle_pkg/world/: house.world
src/naoqi_bridge_msgs2/: CMakeLists.txt  README.md  naoqi_bridge_msgs.yaml  package.xml
src/naoqi_driver2/: CMakeLists.txt  package.xml
src/naoqi_driver2/launch/: naoqi_driver.launch.py  wake_up.py
src/naoqi_driver2/share/: boot_config.json  pepper.rviz
src/naoqi_driver2/share/urdf/: pepper.urdf  pepper_awesome.urdf
src/naoqi_driver2/src/converters/: camera_info_definitions.hpp  laser.cpp
src/pepper_nav/: package.xml  setup.cfg  setup.py
src/pepper_nav/launch/: depthimage_scan.launch.py  image_capture.py  navigation.launch.py  pepper_nav.launch.py  rtabmap.launch.py
src/pepper_nav/params/: a.txt  depth_to_laser.yaml  nav2_params.yaml  rqt_rtabmap.yaml  rtabmap.yaml
src/pepper_nav/pepper_nav/: head_locker.py  laser_geometry.py  laserscan_to_pointcloud.py  navigator.py
src/ros_naoqi_motion/: package.xml  setup.cfg  setup.py
src/ros_naoqi_motion/launch/: motion.launch.py
src/ros_naoqi_motion/ros_naoqi_motion/: naoqi_motion.py
src/ros_naoqi_motion/script/: move_arm.py  test.py
